# 2fau-tauri

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: ci.yml  release.yml
apps/twofau-app/: index.html  package.json  tsconfig.json  vite.config.ts
apps/twofau-app/src/: index.css  main.tsx  tauri-vault-service.ts
apps/twofau-app/src-tauri/: Cargo.toml  tauri.conf.json
apps/twofau-app/src-tauri/capabilities/: default.json
apps/twofau-app/src-tauri/icons/: icon.icns
apps/twofau-app/src-tauri/src/: lib.rs  main.rs  vault.rs
apps/twofau-extension/: MANUAL-CHECKS.md  manifest.json  offscreen.html  options.html  package.json  popup.html  tsconfig.json  vite.config.ts  vitest.config.ts
apps/twofau-extension/src/: index.css  manifest.test.ts  wasm.ts
apps/twofau-extension/src/background/: clipboard.ts  context-menu.test.ts  context-menu.ts  index.ts
apps/twofau-extension/src/offscreen/: clipboard.ts
apps/twofau-extension/src/options/: main.tsx  options-view.tsx
apps/twofau-extension/src/popup/: main.tsx
apps/twofau-extension/src/shared/: messages.ts
apps/twofau-extension/src/test/: fake-chrome.ts  setup-wasm.ts
apps/twofau-extension/src/vault/: backend.ts  base64.ts  extension-vault-service.test.ts  extension-vault-service.ts  recent.ts  scan.ts  session-key.test.ts  session-key.ts  settings.ts  transfer.test.ts  transfer.ts  usage.test.ts  usage.ts  vault-repo.test.ts  vault-repo.ts
crates/twofau-core/: Cargo.toml
crates/twofau-core/src/: base32.rs  error.rs  lib.rs  merge.rs  model.rs  otp.rs  otpauth.rs  store.rs  vault.rs
crates/twofau-wasm/: Cargo.toml
crates/twofau-wasm/src/: lib.rs
docs/: ARCHITECTURE.md  DEVELOPMENT.md  ROADMAP.md
docs/plans/: 2026-07-22-subproject4-chrome-extension.md
docs/specs/: 2026-07-01-subproject0-shared-core.md  2026-07-01-subproject1-crypto-storage.md  2026-07-02-subproject2-shared-ui.md  2026-07-04-subproject3-tauri-desktop.md  2026-07-22-subproject4-chrome-extension.md
