[workspace]
resolver = "2"
members = ["crates/twofau-core", "crates/twofau-wasm", "apps/twofau-app/src-tauri"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/2fau/2fau-app"

[profile.release]
lto = true
opt-level = "z"

# Optimize dependency crates (crypto: pbkdf2/aes-gcm) even in dev/test builds so
# PBKDF2's 600k iterations don't make the test suite crawl. Our own crates stay
# unoptimized for fast incremental builds + good debug info.
[profile.dev.package."*"]
opt-level = 3
