[package]
name = "twofau-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Pure OTP/model/merge logic for 2FAU (no I/O, no clock, no RNG)."

[dependencies]
serde = { version = "1", features = ["derive"] }
hmac = "0.12"
sha1 = "0.10"
sha2 = "0.10"
url = "2"
percent-encoding = "2"
uuid = { version = "1", features = ["serde"] }
base64 = "0.22"
ts-rs = "10"

[dev-dependencies]
serde_json = "1"
