[package]
name = "twofau-app"
version = "0.1.0"
description = "2FAU — menu-bar TOTP/HOTP authenticator"
authors = ["Nikolay Kostyurin"]
edition = "2021"

[lib]
# The `_lib` suffix keeps the lib name distinct from the bin name (a Windows
# cargo quirk: https://github.com/rust-lang/cargo/issues/8519).
name = "twofau_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-positioner = { version = "2", features = ["tray-icon"] }
twofau-core = { path = "../../../crates/twofau-core" }
keyring = "3"
uuid = { version = "1", features = ["v4"] }
getrandom = "0.2"
dirs = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# NOTE: build profiles live in the workspace root Cargo.toml (this crate is a
# workspace member, so a [profile] here would be ignored).
